--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 <p>&nbsp;</p>
 
 <li class="header-nav-item dropdown js-menu-container">
-    <a class="header-nav-link name tooltipped tooltipped-sw js-menu-target" href="/mirtur"
-       aria-label="View profile and more"
-       data-ga-click="Header, show menu, icon:avatar">
-      <img alt="@mirtur" class="avatar" height="20" src="https://avatars1.githubusercontent.com/u/17010306?v=3&amp;s=40" width="20" />
-      <span class="dropdown-caret"></span>
+    <a class="header-nav-link name tooltipped tooltipped-sw js-menu-target" 
     </a>
 
 <H2>      Вторая версия файла      </H2>
